fix: set min-width for admin ui sidebar and fix hiding texts on mobile viewport

--- a/admin-ui/src/styles/SideBar.css
+++ b/admin-ui/src/styles/SideBar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  min-width: 50px;
   position: fixed;
   top: 0;
   bottom: 0;
